scss/pages/_industries.scss
.our__solutions {
    padding: 40px 0px 120px;
    .content {
        margin-bottom: 80px;
    }

    .industry__card {
        background: transparent;
        border-color: transparent !important;
        border-radius: 0;
        color: var(--white);

        .card-header {
            padding: 5px 10px;
            display: flex;
            justify-content: center;
            border-color: transparent;
        }

        .card-body {
            border-color: transparent;
            padding: 5px 10px;
            h3 {
                font-size: 37px;
                margin-bottom: 25px;
                font-weight: 400;
                min-height: 90px;
            }

            p {
                font-size: 20px;
                line-height: 30px;
                min-height: 200px;
            }

        }

        .card-footer {
            border:1px solid white !important;
            //padding: 12px 10px;
            padding: 0;
            margin: 5px 10px;
            
            
            ul {
                li {
                    font-size: 16px;
                    border-bottom: 1px solid white;
                    line-height: 40px;
                    padding-left: 10px;
                    &:last-child {
                        border-bottom: 0px;
                    }
                }
            }
        }
       
    }
    .industries__cardSLider {
        button.slick-next {
            top:auto;
            bottom: -50px;
            right: 1%;
            margin-right: 15px;

            &::before {
                background: var(--light-green);
                width: 60px;
                height: 60px;
                border-radius: 50%;
                display: flex;
                justify-content: center;
                align-items: center;
                border: 4px solid var(--white);
            }
        }

        button.slick-prev {
            top:auto;
            bottom: -50px;
            left: auto;
            right: 0;
            z-index: 1;
            margin-right: 190px;

            &::before {
                background: var(--light-green);
                width: 60px;
                height: 60px;
                border-radius: 50%;
                display: flex;
                justify-content: center;
                align-items: center;
                border: 4px solid var(--white);
            }
        }
    }

    .pagination {
        color: var(--white);
        font-size: 24px;
        font-weight: 300;
        justify-content: flex-end;
        position: relative;
        top: 35px;
        right: 65px;
    }
}

@media screen and (max-width: 620.99px) {
    .our__solutions {
        .industries__cardSLider {
            button.slick-next {
                right: 50%;
                margin-right: -105px;
                z-index: 1;

            }
    
            button.slick-prev {
                left: 50%;
                right: 0;
                margin-left: -150px;
                z-index: 1;
            }
        }
        .pagination {
            justify-content: center;
            position: relative;
            top: 35px;
            right: 0;
        }
    }

    .industry__card {
        text-align: center;
    }
    
}

